[package]
name = "upaste-server"
version = "0.6.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[[bin]]
name = "upaste"
path = "src/main.rs"
doc = false

[dependencies]
error-chain = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
env_logger = "0.5"
log = "0.4"
time = "0.1"
rand = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5"
tera = "0.10"
migrant_lib = { version = "0.18", features = ["d-sqlite"] }
rusqlite = { version = "0.13", features = ["serde_json", "chrono", "bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.5"

# rouille = "1"
# For new `router!` syntax and `log_custom`
rouille = { git = "https://github.com/tomaka/rouille", rev = "b1b88b1748771a334a78e53c9cc7b21d35bdfa53" }

