[package]
name = "upaste-server"
version = "0.0.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2021"

[[bin]]
name = "upaste"
path = "src/main.rs"
doc = false

[dependencies]
error-chain = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
env_logger = "0.5"
log = "0.4"
time = "0.2"
rand = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"
tera = "0.10"
migrant_lib = { version = "0.32", features = ["d-sqlite"] }
rusqlite = { version = "0.24", features = ["serde_json", "chrono", "bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.17"
hex = "0.4"
ring = "0.16"

rouille = "2"

